refactor: api-version static field in ApiConstants
