# src/main/java/com/leet5/ecommerce/controller/BackupController.java
@@ -7,6 +7,8 @@ import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import static com.leet5.ecommerce.util.ApiConstants.API_VERSION_HEADER;
+
 @RestController
 @RequestMapping("/backups")
 public class BackupController {
@@ -17,7 +19,7 @@ public class BackupController {
     }
 
     @GetMapping
-    public ResponseEntity<String> manualBackup(@RequestHeader("api-version") int apiVersion) {
+    public ResponseEntity<String> manualBackup(@RequestHeader(API_VERSION_HEADER) int apiVersion) {
         final var service = factory.getService(apiVersion);
         service.performBackup();
         return ResponseEntity.ok("Backup complete.");
