# src/main/java/com/leet5/ecommerce/controller/PaymentController.java
@@ -6,6 +6,8 @@ import com.leet5.ecommerce.service.factory.PaymentServiceFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import static com.leet5.ecommerce.util.ApiConstants.API_VERSION_HEADER;
+
 @RestController
 @RequestMapping("/payments")
 public class PaymentController {
@@ -17,7 +19,7 @@ public class PaymentController {
 
     @PostMapping
     public ResponseEntity<Payment> processPayment(@RequestBody PaymentRequest request,
-                                                  @RequestHeader("api-version") int apiVersion) {
+                                                  @RequestHeader(API_VERSION_HEADER) int apiVersion) {
         final var paymentService = paymentServiceFactory.getService(apiVersion);
         final var payment = paymentService.processPayment(request);
         return ResponseEntity.ok(payment);
