# src/main/resources/static/openapi.yaml
@@ -259,6 +259,38 @@ paths:
                                 $ref: '#/components/schemas/OrderDTO'
                 '500':
                     description: Internal server error
+    /payments:
+        post:
+            summary: Process payment
+            description: Processes payment for particular order
+            operationId: processPayment
+            tags:
+                - Payment
+            parameters:
+                -   $ref: "#/components/parameters/ApiVersionHeader"
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/PaymentRequest"
+            responses:
+                '200':
+                    description: Created. Returns the created Payment details.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/Payment"
+                '400':
+                    description: Invalid API version or ID supplied
+                '404':
+                    description: Order not found
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/NotFoundExceptionDTO'
+                '500':
+                    description: Internal server error
     /backups:
         get:
             summary: Trigger Manual Backup
@@ -333,6 +365,48 @@ components:
                 - items
                 - orderDateTime
                 - totalAmount
+        PaymentRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                paymentMethod:
+                    $ref: '#/components/schemas/PaymentMethod'
+            required:
+                - id
+                - paymentMethod
+        PaymentMethod:
+            type: string
+            enum:
+                - CREDIT_CARD
+                - DEBIT_CARD
+                - PAYPAL
+                - BANK_TRANSFER
+                - CASH
+            description: Payment method types
+            example: CREDIT_CARD
+        Payment:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                    description: Unique identifier for the payment.
+                amount:
+                    type: number
+                    format: BigDecimal
+                    description: The amount of the payment.
+                paymentDateTime:
+                    type: string
+                    format: date-time
+                    description: Date and time of the payment.
+                paymentMethod:
+                    $ref: '#/components/schemas/PaymentMethod'
+            required:
+                - amount
+                - paymentDateTime
+                - paymentMethod
         NotFoundExceptionDTO:
             type: object
             properties:
@@ -344,7 +418,7 @@ components:
                     example: "Customer with ID 123 not found"
     parameters:
         ApiVersionHeader:
-            name: api-version
+            name: ${api.version.header.name}
             in: header
             required: true
             schema:
